// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render controls 1`] = `
<nav
  class="toolbar light"
>
  <div
    class="controls light"
  >
    <button
      class="button light"
    >
      <span
        class="label"
      >
        Test
      </span>
    </button>
  </div>
  <div
    class="controls light"
  >
    <button
      class="button light"
    >
      <span
        class="label"
      >
        Test
      </span>
    </button>
  </div>
</nav>
`;

exports[`Render dark theme 1`] = `
<nav
  class="toolbar dark"
>
  <div
    class="controls dark"
  >
    <button
      class="button dark"
    >
      <span
        class="label"
      >
        Test
      </span>
    </button>
  </div>
  <div
    class="controls dark"
  >
    <button
      class="button dark"
    >
      <span
        class="label"
      >
        Test
      </span>
    </button>
  </div>
</nav>
`;

exports[`Render with Snackbar 1`] = `
<nav
  class="toolbar light"
>
  <div
    class="snackbar error visible"
  >
    <span
      aria-label="su-exclamation-triangle"
      class="su-exclamation-triangle icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.error
      </strong>
      <button
        class="closeButton"
      >
        sulu_admin.close
        <span
          aria-label="su-times"
          class="su-times closeButtonIcon"
        />
      </button>
    </div>
  </div>
  <div
    class="controls light"
  >
    <button
      class="button light"
    >
      <span
        class="label"
      >
        Test
      </span>
    </button>
  </div>
</nav>
`;
